<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121111"
    tools:context=".AngleCalculatorActivity">


    <Button
        android:id="@+id/cancelAnglesButton"
        android:layout_width="@dimen/doubleSmallButtonSize"
        android:layout_height="@dimen/smallButtonSize"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@mipmap/ic_button_background_round"
        android:text="@android:string/cancel"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/standardButtonText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/angleValueEditText" />

    <EditText
        android:id="@+id/angleValueEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/enter_desired_angle"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="@color/colorText"
        android:textColorHint="#489E9B9B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/angleSpinner"
        app:layout_constraintTop_toBottomOf="@+id/roofSlopeEditText" />

    <Button
        android:id="@+id/saveAnglesButton"
        android:layout_width="@dimen/doubleSmallButtonSize"
        android:layout_height="@dimen/smallButtonSize"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@mipmap/ic_button_background_round"
        android:text="@string/save"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/standardButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/angleValueEditText" />

    <TextView
        android:id="@+id/angleLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/angle"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/angleValueEditText"
        app:layout_constraintStart_toStartOf="@+id/angleIdTextView"
        app:layout_constraintTop_toTopOf="@+id/angleValueEditText" />

    <Spinner
        android:id="@+id/angleSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:entries="@array/angles"
        app:layout_constraintStart_toEndOf="@+id/angleIdTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/angleIdTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/choose_angle"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/angleSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/angleSpinner" />

    <TextView
        android:id="@+id/roofSlopeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roof_slope"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/roofSlopeEditText"
        app:layout_constraintStart_toStartOf="@+id/angleIdTextView"
        app:layout_constraintTop_toTopOf="@+id/roofSlopeEditText" />

    <EditText
        android:id="@+id/roofSlopeEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/enter_roof_slope_on_12_12"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:paddingRight="8dp"
        android:textColor="@color/colorText"
        android:textColorHint="#489E9B9B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/angleSpinner"
        app:layout_constraintTop_toBottomOf="@+id/angleSpinner" />
</androidx.constraintlayout.widget.ConstraintLayout>